# cppidioms

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
3p/: build_all.sh  build_using_cmake.sh  build_using_configure.sh  build_using_make.sh
benchmarks/: CMakeLists.txt  smart_pointers.cpp
src/: .clang-format  CMakeLists.txt  accumulate.cpp  arg_parser.cpp  avoid_boost_optional.cpp  call_once.cpp  code_warrior.cpp  custom_deleter.cpp  eigen_matrix.cpp  eigen_ops.cpp  enable_if.cpp  enum_values.cpp  epsilon.cpp  function_arg_lifetime.cpp  generate.cpp  get_line.cpp  get_unused_port.cpp  interface_class.cpp  is_base_of.cpp  map_erase.cpp  matrix.cpp  message.cpp  message.hpp  misuse_smart_ptr.cpp  move_semantics.cpp  numeric_limits.cpp  pmr.cpp  polynomials.cpp  predictors.cpp  predictors.hpp  print.cpp  shared_ptr.cpp  singleton.cpp  stats.cpp  std_vector_back.cpp  stream_operator.cpp  struct_constructor.cpp  terminate_flush.cpp  test.hpp  test_constexpr.cpp  (+16 more)
thread/: CMakeLists.txt  hello_world.cpp
